--- a/style.css
+++ b/style.css
@@ -1,16 +1,35 @@
 body{
-    background-color: rgb(240, 240, 240);
+    background: #2980B9;
+    background: -webkit-linear-gradient(45deg,#2980B9, #6DD5FA, #FFFFFF);
+    background: linear-gradient(45deg, #2980B9, #6DD5FA, #FFFFFF);
+    background-size: 200% 200%;
+    animation:gradient 10s ease infinite;
 
     font-size:16px;
     font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    color:#ffffff;
+    text-shadow: 1px 1px 1px rgb(0, 0, 0);
 }
+
+@keyframes gradient{
+    0%{
+        background-position: 0 50%;
+    }
+    50%{
+        background-position: 100% 50%;
+    }
+    100%{
+        background-position: 0 50%;
+    }
+}
+
 .container{
     max-width: 750px;
     margin:auto;
     padding-top: 30px;
 }
 .bg-gray{
-    background-color: rgb(192, 192, 192);
+    background:#2b8ac977;
 }
 .card{
     padding: 15px 20px;
@@ -31,13 +50,13 @@ body{
     margin-bottom: 10px;
 }
 .info{
-    color:rgb(0, 0, 0);
+    color: #ffffff;
     margin:0;
     display: flex;
     margin-bottom: 20px;
 }
 a{
-    color:black;
+    color:rgb(255, 255, 255);
     text-decoration:none;
 }
 a:hover{
